# AoFPGA-2025

./: .gitignore  README.md
day1/: README.md  reciprocal_mult.py  solution.py
day1/hardcaml/src/: dial.ml  dune
day1/hardcaml/test/: dune  test_dial.ml
day3/: README.md  solution.py
day3/hardcaml/src/: dune  hw_stack.ml  top.ml
day3/hardcaml/test/: dune  test_stack.ml  test_top.ml
day4/: README.md  solution.py
day4/hardcaml/src/: conv2d.ml  erode.ml
day4/hardcaml/test/: dune  test_conv2d.ml  test_erode.ml
